Updated html and css

--- a/index.html
+++ b/index.html
@@ -348,26 +348,9 @@
   </div>
 
   </div>
-  <button type = "button" class = "help"><svg width="24" height="24" viewBox="0 0 24 24" focusable="false" class=" NMm5M"><path d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"></path></svg></button>
+  <button type = "button" class = "help" data-title = "Help and Feedback"><svg width="24" height="24" viewBox="0 0 24 24" focusable="false" class=" NMm5M"><path d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"></path></svg></button>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src = "script.js"></script>
 </body>
 </html>
-
-<script>
-
-
-let main_menu = document.querySelector(".main-menu");
-let sidebar = document.querySelector(".sidebar");
-
-main_menu.onclick = function(){
-  sidebar.classList.toggle("active");
-}
-document.onclick = function(e){
-  if(!main_menu.contains(e.target) && !sidebar.contains(e.target)){
-    sidebar.classList.remove("active");
-  }
-}
-
-
-</script>
